Register new namespace + link route to handler

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,10 @@
     "require": {
         "michelf/php-markdown": "^1.9",
         "bramus/router": "^1.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Site\\": "src/"
+        }
     }
 }
